@@ -267,6 +267,19 @@ public class UtilitiesTest extends JAMWikiUnitTest {
 	/**
 	 *
 	 */
+	@Test
+	public void testIsHtmlEntity() throws Throwable {
+		assertFalse("Invalid HTML entity test #1", Utilities.isHtmlEntity(null));
+		assertFalse("Invalid HTML entity test #2", Utilities.isHtmlEntity(""));
+		assertTrue("Invalid HTML entity test #3", Utilities.isHtmlEntity("&amp;"));
+		assertTrue("Invalid HTML entity test #4", Utilities.isHtmlEntity("&#38;"));
+		assertTrue("Invalid HTML entity test #5", Utilities.isHtmlEntity("&#x26;"));
+		assertFalse("Invalid HTML entity test #6", Utilities.isHtmlEntity("&bogus;"));
+	}
+
+	/**
+	 *
+	 */
 	@Test(expected=NullPointerException.class)
 	public void testFormatMessageThrowsNullPointerException() throws Throwable {
 		Utilities.formatMessage("testUtilitiesKey", null);
