@@ -1,2 +1,0 @@
-<p>&#39;</p>
-<p>&lt;</p>
